# p-automates

./: .gitignore  README.md  pyproject.toml  result.txt  test_result.txt
rapport/: main.tex  packages.tex  preamble.tex
src/: gen_aut.py  gen_autc.py  gen_autcard.py  gen_autr.py  gen_minaut.py  main.py  msg.py  mytests.py  project.py  utils.py
