[tool.poetry]
name = "p-automates"
version = "0.1.0"
description = ""
authors = ["Hugo Charels <hugo.charels@ulb.be>", "Rayan CB <rayan.contuliano.bravo@ulb.be"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-sat = "^0.1.7"
automata-lib = "^8.1.0"
matplotlib = "^3.8.0"
networkx = "^3.2.1"
numpy = "^1.26.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
# Check https://beta.ruff.rs/docs/rules/ for all rules
fixable = ["ALL"]
# Do not fix imports automatically (it removes unused imports in __init__.py files)
unfixable = ["F401", "D205"]

# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", # pydocstyle
            "F", # pyflake
            "UP", # pyupgrade
            "D", # pydocstyle
            "W", # 
            "B", # 
            "C901"]
# ignore = ["PEP257"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 100

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.flake8-bandit]
check-typed-exception = true

[tool.ruff.isort]
case-sensitive = true

[tool.black]
line-length = 100


[tool.pyright]
# Check 
# extraPaths = ["./.venv/lib/python3.10/site-packages"]
line-length = 100

